<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/watchThirtyImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rotation="30"
        android:src="@drawable/theme1_watch"
        android:contentDescription="@string/watch_description" />

    <ImageView
        android:id="@+id/watchSixtyImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rotation="60"
        android:src="@drawable/theme1_watch"
        android:contentDescription="@string/watch_description" />

    <ImageView
        android:id="@+id/watchZeroImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/theme1_watch"
        android:contentDescription="@string/watch_description" />

    <ImageView
        android:id="@+id/appLauncherImageView"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginTop="19dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/theme1_ic_app_manager"
        android:contentDescription="@string/app_launcher_description" />

    <ImageView
        android:id="@+id/neonBgDayZoneImageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignEnd="@id/clock"
        android:layout_centerVertical="true"
        android:layout_marginEnd="-25dp"
        android:src="@drawable/theme1_neon_bg"
        android:contentDescription="@string/neon_bg_day_zone_description" />

    <ImageView
        android:id="@+id/neonBgStepZoneImageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@id/clock"
        android:layout_alignStart="@id/clock"
        android:layout_marginBottom="-25dp"
        android:src="@drawable/theme1_neon_bg"
        android:contentDescription="@string/neon_bg_step_zone_description" />

    <ImageView
        android:id="@+id/neonBgHrmZoneImageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@id/clock"
        android:layout_alignEnd="@id/clock"
        android:layout_marginBottom="-25dp"
        android:src="@drawable/theme1_neon_bg"
        android:contentDescription="@string/neon_bg_hrm_zone_description" />

    <ImageView
        android:id="@+id/secondMoverImageView"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/theme1_neon_bg"
        android:contentDescription="@string/second_mover_description" />

    <FrameLayout
        android:id="@+id/clock"
        android:layout_width="138dp"
        android:layout_height="90dp"

        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hourTextView"
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:gravity="center"
                android:text="@string/default_hour_label"
                android:textAlignment="center"
                android:textColor="@color/theme1"
                android:textSize="60dp" />

            <LinearLayout
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="4dp">

                <TextView
                    android:id="@+id/minuteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/default_minute_label"
                    android:textAlignment="center"
                    android:textSize="40dp"
                    android:scaleY="1.3"
                    android:scaleX="1.3"
                    android:textColor="@color/theme1"
                    android:gravity="center|fill_vertical" />

                <TextView
                    android:id="@+id/secondTextView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/default_minute_label"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:textColor="@color/theme1"
                    android:gravity="center" />
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>

</RelativeLayout>
